Fix join orderer text alignment (#275)
* fix text alignment when joining system channel-less orderers to channel

--- a/packages/apollo/src/components/JoinOSNChannelModal/_joinOSNChannelModal.scss
+++ b/packages/apollo/src/components/JoinOSNChannelModal/_joinOSNChannelModal.scss
@@ -99,20 +99,6 @@
 	}
 }
 
-
-
-// copy paste...
-// dsh todo test taking hits top level out and deleting the ones in _channelModal.scss
-/*.ibp-channel-osn-join {
-	font-size: 14px;
-
-	p,
-	span,
-	div,
-	a {
-		font-size: 14px;
-	}*/
-/*
 .ibp-join-osn-wrap {
 	margin-bottom: 2rem;
 	border-left: 3px #505355 solid;
@@ -121,14 +107,10 @@
 
 .ibp-join-osn-desc p,
 .ibp-join-osn-desc span {
-	font-size: .875rem;
+	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1rem;
 }
-
-
-
-
 
 .ibp-join-osn-cluster-check {
 	vertical-align: top;
@@ -149,7 +131,7 @@
 .ibp-join-osn-identity-wrap {
 	display: inline-block;
 	//margin-top: -1rem;
-	width: 28rem;
+	width: 25rem;
 }
 
 .ibp-join-osn-cluster-wrap {
@@ -163,8 +145,8 @@
 .ibp-join-osn-node-wrap-wrap {
 	margin-left: 2.3rem;
 	margin-bottom: 0.5rem;
-	width: 80%;
-	max-width: 43rem;
+	width: 85%;
+	max-width: 55rem;
 }
 
 .ibp-join-osn-node-wrap {
@@ -183,12 +165,16 @@
 
 .ibp-join-osn-name {
 	font-size: 1rem;
+	font-weight: 400;
+	display: inline-block;
+	margin-top: 0.1rem;
 }
 
 .ibp-join-osn-host {
 	font-size: 0.8rem;
 	color: #ccc;
 	opacity: 0.5;
+	margin-top: 0.4rem;
 }
 
 .ibp-join-osn-status {
@@ -220,13 +206,14 @@
 
 .ibp-join-osn-node-details {
 	display: inline-block;
+	font-weight: 400;
 }
 
 .ibp-join-osn-label {
-	font-size: .75rem;
+	font-size: 0.75rem;
 	font-weight: 400;
 	line-height: 1.34;
-	letter-spacing: .32px;
+	letter-spacing: 0.32px;
 	color: #c1c7cd;
 	margin-bottom: 1.2rem;
 }
@@ -248,7 +235,9 @@
 }
 
 .ibp-join-osn-clusterid {
-	min-width: 14rem;
+	min-width: 35rem;
+	padding: 1.5rem;
+	padding-top: 0rem;
 }
 
 .ibp-join-osn-count {
@@ -257,8 +246,10 @@
 }
 
 .ibp-join-osn-error {
-	font-size: 0.75rem;
+	font-size: 0.875rem;
+	font-weight: 500;
 	color: #fb4b53;
+	line-height: 1.2rem;
 }
 
 .ibp-join-osn-cluster-title {
@@ -266,17 +257,22 @@
 	margin-top: 2rem;
 }
 
-.ibp-join-osn-identity-wrap>.ibp-form-field {
+.ibp-join-osn-identity-wrap > .ibp-form-field {
 	margin-bottom: 0.5rem;
 }
 
+/*
 .ibp-join-osn-select-followers {
-	position: absolute;
-	left: 20rem;
-	top: 11.5rem;
+	float: right;
+	margin-right: 10rem;
+	margin-top: -.5rem;
 }
+*/
 
 .ibp-join-osn-error-wrap {
 	color: #fb4b53;
 }
-*/
+
+.ibp-join-osn-joined {
+	opacity: 0.4;
+}
